buildscript {
	repositories {
		mavenLocal()
		maven { url = uri("https://plugins.gradle.org/m2/") }
		jcenter()
		maven { url = uri("https://dl.bintray.com/kotlin/kotlin-dev") }
	}
	dependencies {
		classpath("com.gradle.publish:plugin-publish-plugin:0.10.1")
		classpath("org.jetbrains.kotlin.jvm:org.jetbrains.kotlin.jvm.gradle.plugin:1.3.60")
		classpath("gradle.plugin.org.jetbrains.intellij.plugins:gradle-intellij-plugin:0.4.14")
	}
}

apply plugin: 'java'
apply plugin: 'kotlin'
apply plugin: 'idea'
apply plugin: 'org.jetbrains.intellij'

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
	sourceCompatibility = JavaVersion.VERSION_1_8
	targetCompatibility = JavaVersion.VERSION_1_8

	kotlinOptions {
		freeCompilerArgs = ["-XXLanguage:+InlineClasses"]
		apiVersion = "1.3"
		languageVersion = "1.3"
		jvmTarget = "1.8"
	}
}

sourceSets {
	main {
		java {
			srcDirs 'src/main/kotlin'
		}
	}
}


repositories {
	mavenLocal()
	maven { url = uri("https://dl.bintray.com/korlibs/korlibs") }
	jcenter()
	google()
	maven { url = uri("https://dl.bintray.com/kotlin/kotlin-dev") }
}

dependencies {
	compile "com.soywiz.korlibs.korge.plugins:korge-build:1.5.0c"
	//compile 'net.sourceforge.mydoggy:mydoggy:1.4.2'
	//compile 'net.sourceforge.mydoggy:mydoggy-plaf:1.4.2'
	//compile 'net.sourceforge.mydoggy:mydoggy-api:1.4.2'
	//compile 'net.sourceforge.mydoggy:mydoggy-res:1.4.2'
	//compile project(":korge-build")
}


def globalProps = properties

intellij {
	version "IC-2019.3"; plugins = ['gradle', 'java']
	//version "IC-2019.3"; plugins = ['gradle']
	//version "IC-2019.3"; plugins = ['gradle', 'java', 'Kotlin']
	//version "IC-2018.3.5"
	//version "IC-2018.3.4"; plugins = ['gradle', 'maven']
	updateSinceUntilBuild false

	pluginName 'KorgePlugin'
	downloadSources true
}

publishPlugin {
	if (globalProps.jetbrainsUsername != null) {
		username globalProps.jetbrainsUsername
		password globalProps.jetbrainsPassword
	}
}

runIde {
	maxHeapSize = "2g"
}

task runDebugTilemap(type: JavaExec) {
	//classpath = sourceSets.main.runtimeClasspath
	classpath = sourceSets.main.runtimeClasspath + configurations.idea

	main = 'com.soywiz.korge.intellij.editor.tile.MyTileMapEditorFrame'
}

//println(configurations.names)